# ai-agent-build

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  questions.md  requirements.txt
01-k8s-health-monitor/: README.md  server.py
01-k8s-health-monitor/src/: agent.py  alerts.py  cli.py  comparison.py  eval.py  k8s_client.py
01-k8s-health-monitor/web/: index.html  script.js  style.css
shared/: llm.py
